src/tui/snapshots/mysteries__tui__render__tests__network_permission_midnight_web_fetch_first.snap
---
source: src/tui/render.rs
expression: "render_to_styled_with_size(&first, &Theme::midnight(), 160, 24)"
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.2.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────‹/›
‹text.primary›                                                           ‹/›‹accent.primary›〔/help〕‹/›‹text.primary› 查看内置命令‹/›
‹text.primary›                                                           ‹/›‹accent.primary›〔/status〕‹/›‹text.primary› 当前会话快照‹/›
‹text.primary›                                                           ‹/›‹accent.primary›〔错误〕‹/›‹text.primary› 演示:鉴权失败(致命错误,终止 Loop)‹/›
‹warning.fg bg=warning.bg›┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐‹/›
‹warning.fg bg=warning.bg›│‹/›‹warning.fg bg=warning.bg +bold›▲ 需要网络授权‹/›‹text.primary bg=warning.bg›                                                                                                                                                ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›tool: web_fetch                                                                                                                                               ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›args: {"url":"https://example.com/research/long-segment/long-segment/?visible=安全&bidi=\u{202E}&zero=\u{200B}&literal=\\u{202E}&tail=LAST"}                  ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›target: https://example.com/research/long-segment/long-segment/?visible=%E5%AE%89%E5%85%A8&bidi=%E2%80%AE&zero=%E2%80%8B&literal=\u{202E}&tail=LAST           ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›scope: max_redirects=3, may_cross_origin=true, ssrf_each_hop=true                                                                                             ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›授权:仅本次调用；最多 3 次、可能跨站的公网重定向；每跳仍过 SSRF                                                                                               ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›第 1-4 / 4 行 · ↑↓/PgUp/PgDn 查看完整参数                                                                                                                     ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›[y · 允许本次]   [n · 拒绝]                                                                                                                                   ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›提示:Enter = 允许 · Esc = 拒绝                                                                                                                                ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›│‹/›‹text.primary bg=warning.bg›                                                                                                                                                              ‹/›‹warning.fg bg=warning.bg›│‹/›
‹warning.fg bg=warning.bg›└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘‹/›
‹warning.fg›▲ 等待授权…‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›                                                                                                                                     ‹/›‹text.muted›输入任务,或 / 执行命令…‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
