src/tui/snapshots/mysteries__tui__render__tests__tui_active_plan_overflow.snap
---
source: src/tui/render.rs
expression: text
---
‹text.secondary +bold›✦ mysteries‹/›‹text.muted›  agent · v1.1.0‹/›

‹border.strong›────────────────────────────────────────────────────────────────────────────────‹/›
‹text.primary›        ‹/›‹text.body›读只读,写必询 —— 每一次文件改动与命令执行,都先把 diff 摊给你,等‹/›
‹text.primary›                               ‹/›‹text.body›你按下 y 才动手。‹/›

‹text.primary›                                     ‹/›‹text.muted›试试 ↓‹/›
‹text.primary›                   ‹/›‹accent.primary›〔任务〕‹/›‹text.primary› 给 Config 加 timeout_secs 字段‹/›
‹text.primary›                   ‹/›‹accent.primary›〔/help〕‹/›‹text.primary› 查看内置命令‹/›
‹text.primary›                   ‹/›‹accent.primary›〔/status〕‹/›‹text.primary› 当前会话快照‹/›
‹text.primary›                   ‹/›‹accent.primary›〔错误〕‹/›‹text.primary› 演示:鉴权失败(致命错误,终止 Loop)‹/›
‹text.muted›◇ 就绪‹/›
‹warning.fg bg=bg.surface +bold›◑ 执行中的计划 · ‹/›‹text.body bg=bg.surface›Long execution plan‹/›
‹text.primary bg=bg.surface›  ‹/›‹success.fg bg=bg.surface›✓‹/›‹text.secondary bg=bg.surface› 1. ‹/›‹text.body bg=bg.surface›Execute step 1 with a descriptive title‹/›‹text.primary bg=bg.surface›  ‹/›‹text.muted bg=bg.surface›cargo test step 1 → ok‹/›
‹text.primary bg=bg.surface›  ‹/›‹success.fg bg=bg.surface›✓‹/›‹text.secondary bg=bg.surface› 2. ‹/›‹text.body bg=bg.surface›Execute step 2 with a descriptive title‹/›‹text.primary bg=bg.surface›  ‹/›‹text.muted bg=bg.surface›cargo test step 2 → ok‹/›
‹text.primary bg=bg.surface›  ‹/›‹success.fg bg=bg.surface›✓‹/›‹text.secondary bg=bg.surface› 3. ‹/›‹text.body bg=bg.surface›Execute step 3 with a descriptive title‹/›‹text.primary bg=bg.surface›  ‹/›‹text.muted bg=bg.surface›cargo test step 3 → ok‹/›
‹text.primary bg=bg.surface›  ‹/›‹success.fg bg=bg.surface›✓‹/›‹text.secondary bg=bg.surface› 4. ‹/›‹text.body bg=bg.surface›Execute step 4 with a descriptive title‹/›‹text.primary bg=bg.surface›  ‹/›‹text.muted bg=bg.surface›cargo test step 4 → ok‹/›
‹text.primary bg=bg.surface›  ‹/›‹warning.fg bg=bg.surface›▸‹/›‹text.secondary bg=bg.surface› 12. ‹/›‹text.body bg=bg.surface›Execute step 12 with a descriptive title‹/›
‹text.muted bg=bg.surface›  ⋯ 其余 15 步‹/›
‹border.subtle›┌──────────────────────────────────────────────────────────────────────────────┐‹/›
‹border.subtle›│‹/›‹accent.primary›> ‹/›‹text.primary›continue execution                                                          ‹/›‹border.subtle›│‹/›
‹border.subtle›└──────────────────────────────────────────────────────────────────────────────┘‹/›
‹text.muted›mock · mock-model · iter 0/4 · 0 msgs · .‹/›
‹text.muted›▸ normal · shift+tab 切换 · think low‹/›
