src/tui/snapshots/mysteries__tui__render__tests__tui_activity_compacting.snap
---
source: src/tui/render.rs
expression: text
---
‹accent.primary›⠸ 压缩上下文…‹/›
