src/tui/snapshots/mysteries__tui__render__tests__tui_activity_copy_hint.snap
---
source: src/tui/render.rs
expression: text
---
‹text.muted›↓ 120 tok · 60 t/s‹/›‹text.primary›                                                  ‹/›‹text.muted›已复制 35 字‹/›
